# discord-mockup

./: CLAUDE.md  LICENSE  README.md  build.sh  dev.db  up.sh
backend/: Cargo.toml
backend/src/: channel.rs  error.rs  main.rs  message.rs  server.rs  snapshot.rs  typing.rs  user.rs  voice_signal.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/ui/: layout.tsx  page.tsx
frontend/src/bindings/: Channel.ts  Message.ts  Server.ts  Snapshot.ts  Typing.ts  Update.ts  User.ts  VoiceSignal.ts
frontend/src/components/: Modal.tsx  UI.tsx  VoiceChannel.tsx
frontend/src/hooks/: useVoiceChat.ts
frontend/src/state/: app-state.tsx
migrations/: 20251006220744_initial.sql
