[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
hyper = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["compression-br", "compression-gzip", "cors", "fs", "trace"] }
tracing = "0.1.41"
ts-rs = { version = "11.0.1", features = ["chrono", "chrono-impl", "serde-json-impl", "serde_json", "tokio", "tokio-impl"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
webrtc = { version = "0.14.0", features = ["openssl"] }
